--- a/Binner.Model.Common/Binner.Model.Common.csproj
+++ b/Binner.Model.Common/Binner.Model.Common.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/replaysMike/Binner.Model.Common</RepositoryUrl>
     <PackageTags>binner model common refactor michael brown</PackageTags>
     <PackageReleaseNotes>Binner common model library</PackageReleaseNotes>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -23,6 +23,10 @@
 
   <ItemGroup>
     <None Include="binner.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="TypeSupport" Version="1.1.12" />
   </ItemGroup>
 
 </Project>
